# pelican_ui

./: .gitignore  Cargo.toml  README.md  demo.md
demo/: Cargo.toml  air_cache.db
demo/src/: lib.rs  main.rs
src/: README.md  events.rs  layout.rs  lib.rs  pages.rs  plugin.rs  theme.rs  utils.rs
src/components/: avatar.rs  button.rs  checkbox.rs  data_item.rs  images.rs  interactions copy.rs  interactions.rs  keypad.rs  list_item.rs  messages.rs  mod.rs  note.rs  numerical_input.rs  qr_code.rs  qr_scanner.rs  radio.rs  searchbar.rs  shapes.rs  slider.rs  text.rs  text_input.rs  toggle.rs
src/components/button/: button.rs
src/components/common/: alert.rs  avatar.rs  button.rs  data_item.rs  images.rs  interactions.rs  list_item.rs  mod.rs  qr_code.rs  qr_scanner.rs  shapes.rs  slider.rs  text.rs  text_input.rs
src/components/common/button/: button.rs  icon.rs
src/components/interface/: desktop.rs  general.rs  interfaces.rs  mobile.rs  mod.rs  navigation.rs  system.rs  web.rs
src/interactions/: button.rs  mod.rs  numerical_input.rs  scrollable.rs  selectable.rs  slider.rs  text_input.rs  toggle.rs
src/interface/: general.rs  mod.rs  navigation.rs  system.rs
src/theme/: brand.rs  colors.rs  fonts.rs  icons.rs  layout.rs
