[package]
name = "pelican_ui"
version = "2.0.6"
edition = "2024"
description = "Standard UI tools and components built off Pelican UI of the RAMP stack."
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/pelican_ui"

[lib]
name = "pelican_ui"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1.16.0", features = ["v4", "js"] }
hex = "0.4.3"
include_dir = "0.7.4"
prism = {package = 'prism2', path="../prism"}
chrono = "0.4.42"
quircs = "0.10.3"
qrcode = "0.14.1"
imageproc = "0.25.0"
image = "0.25.9"
nsvg = "0.5.1"
ptsd = {path = "../ptsd"}